--- a/index.html
+++ b/index.html
@@ -65,15 +65,21 @@
             .catch(error => console.error('Error fetching the story:', error));
     </script>
     
-    <div id="story-container"></div>
+    <p id="paragraph-count"></p>
 
     <script>
         // Menggunakan fetch untuk mendapatkan isi dari file story.txt
         fetch('story.txt')
             .then(response => response.text())
             .then(data => {
-                // Menampilkan isi file di dalam elemen dengan id 'story-container'
-                document.getElementById('story-container').innerText = data;
+                // Mengambil teks di dalam tag <p> menggunakan regex
+                const paragraphTexts = data.match(/<p>(.*?)<\/p>/gs);
+
+                // Menghitung jumlah tag <p> dalam isi file
+                const paragraphCount = paragraphTexts ? paragraphTexts.length : 0;
+
+                // Menampilkan jumlah tag <p> di dalam elemen dengan id 'paragraph-count'
+                document.getElementById('paragraph-count').innerText = `Jumlah tag <p>: ${paragraphCount}`;
             })
             .catch(error => console.error('Error fetching the story:', error));
     </script>
