--- a/index.html
+++ b/index.html
@@ -65,15 +65,15 @@
             .catch(error => console.error('Error fetching the story:', error));
     </script>
     
-    <div id="story-container"></div>
+    <div id="paragraph-content"></div>
 
     <script>
         // Menggunakan fetch untuk mendapatkan isi dari file story.txt
         fetch('story.txt')
             .then(response => response.text())
             .then(data => {
-                // Menampilkan isi file di dalam elemen dengan id 'story-container'
-                document.getElementById('story-container').innerText = data;
+                // Menampilkan isi file dengan mempertahankan sifat tag
+                document.getElementById('paragraph-content').innerHTML = data;
             })
             .catch(error => console.error('Error fetching the story:', error));
     </script>
