--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta property="og:image" content="https://5d621185-5174-4adf-a9c9-b94adede433a-00-3fw8ufv9kdnud.pike.replit.dev/assets/images/SmLAXaEIkBdCifx.jpg">
     <meta name="description" content="Selamat datang di labirin kegelapan, di mana cerita-cerita menyeramkan mengintai di setiap sudut layar. Siap untuk terjebak dalam kisah-kisah yang membuat malam semakin dingin.">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
-    <link rel="stylesheet" href="assets/text.css" type="text/css">
+    <link rel="stylesheet" href="text.css" type="text/css">
     <link rel="icon" href="https://tierced-butters.000webhostapp.com/assets/images/mtgDfoGiiAtsgrc.jpg" type="image/png">
     <link rel="shortcut" href="https://tierced-butters.000webhostapp.com/assets/images/mtgDfoGiiAtsgrc.jpg">
     <link rel="shortcut icon" type="image/x-icon" href="https://tierced-butters.000webhostapp.com/assets/images/mtgDfoGiiAtsgrc.jpg">
