--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </head>
 
   <style>
-    img[alt="www.000webhost.com"]{display:none;}
+    img[alt="otakdark.github.io"]{display:none;}
     body {
       margin: 0;
       padding: 10px; /* Atur padding sesuai yang diinginkan */
