--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   
   <body style="background-color: white; font-family: 'Times New Roman', Times, serif; color: black; text-align: justify;">
 
-    <h1 style="text-align: center;" class="text-redan">OTAK DARK</h1>
+    <h1 style="text-align: center;" class="text-redan">B4DUT CORE</h1>
 
     <p style="font-weight: bold;" id="paragraph-count"></p>
 
