--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="sc/text.css" type="text/css">
     <link rel="icon" href="sc/mtgDfoGiiAtsgrc.jpg" type="image/png">
     <link rel="shortcut" href="sc/mtgDfoGiiAtsgrc.jpg">
-    <link rel="shortcut icon" type="image/x-icon" href="sc/mtgDfoGiiAtsgrc.jpg">
+    <link rel="shortcut icon" href="sc/mtgDfoGiiAtsgrc.jpg" type="image/x-icon">
     <script src="sc/unit.js"></script>
     <title>STORY CREEPY</title>
   </head>
