--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
       align-items: center;
     }
   </style>
+
+  <script>
+    // Panggil fungsi dari unit.js
+    unit.doSomething();
+  </script>
   
   <body style="background-color: white; font-family: 'Times New Roman', Times, serif; color: black; text-align: justify;">
 
