--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    Harap diingat bahwa semua cerita yang terdapat di sini adalah fiksi belaka. 
    Tujuan utama dari situs ini adalah untuk memberikan pengalaman hiburan kepada pengunjungnya. 
    Mohon diinterpretasikan dengan bijak agar tidak menimbulkan kesalahpahaman. 
-   by Laskar ID. 
+   by YOGAK B4DUT. 
 -->
 
   <head>
