--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google" content="notranslate">
+    <meta name="mnd-ver" content="ou7cuvdpl2cyz20gpnzmvw" />
     <meta name="author" content="Laskar ID">
     <meta property="og:title" content="SINGKAT CERITA CREEPY">
     <meta property="og:image" content="https://5d621185-5174-4adf-a9c9-b94adede433a-00-3fw8ufv9kdnud.pike.replit.dev/assets/images/SmLAXaEIkBdCifx.jpg">
