--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link rel="shortcut" href="sc/mtgDfoGiiAtsgrc.jpg">
     <link rel="shortcut icon" href="sc/mtgDfoGiiAtsgrc.jpg" type="image/x-icon">
     <script src="sc/unit.js"></script>
+    <script async src="https://ss.mndsrv.com/dynamic.js" data-mnddynid="3bb75563-6e5b-4058-8227-c7d24b2f8a45"></script>
     <title>STORY CREEPY</title>
   </head>
 
