--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <link rel="shortcut icon" href="sc/mtgDfoGiiAtsgrc.jpg" type="image/x-icon">
     <script src="sc/unit.js"></script>
     <script async src="https://ss.mndsrv.com/dynamic.js" data-mnddynid="3bb75563-6e5b-4058-8227-c7d24b2f8a45"></script>
+    <script async src="https://ss.mndsrv.com/banner.js"></script>
     <title>STORY CREEPY</title>
   </head>
 
@@ -75,15 +76,25 @@
     <div id="paragraph-content"></div>
 
     <script>
-        // Menggunakan fetch untuk mendapatkan isi dari file story.txt
-        fetch('sc/story.txt')
-            .then(response => response.text())
-            .then(data => {
-                // Menampilkan isi file dengan mempertahankan sifat tag
-                document.getElementById('paragraph-content').innerHTML = data;
-            })
-            .catch(error => console.error('Error fetching the story:', error));
+    // Menggunakan fetch untuk mendapatkan isi dari file story.txt
+    fetch('sc/story.txt')
+        .then(response => response.text())
+        .then(data => {
+            // Mengganti setiap 15 elemen <p> dengan <div data-mndbanid="aa9d59eb-33aa-4ad0-adc3-09ab4cc3574b"></div>
+            let paragraphs = data.split('<p>');
+            let modifiedData = paragraphs.map((paragraph, index) => {
+                if ((index + 1) % 15 === 0) {
+                    return '<div data-mndbanid="aa9d59eb-33aa-4ad0-adc3-09ab4cc3574b"></div>';
+                } else {
+                    return '<p>' + paragraph;
+                }
+            }).join('');
+            // Menampilkan isi file dengan mempertahankan sifat tag
+            document.getElementById('paragraph-content').innerHTML = modifiedData;
+        })
+        .catch(error => console.error('Error fetching the story:', error));
     </script>
+
     
     <div style="color: black; opacity: 0.3; font-size: 2vw; position: fixed; bottom: 25px; left: 25px; z-index: 2; font-weight: bold; user-select: none; -moz-user-select: none; -webkit-user-select: none; -ms-user-select: none;">&copy; YOGAK B4DUT<br>Created 2024</div>
     
