--- a/index.html
+++ b/index.html
@@ -88,12 +88,13 @@
                 } else {
                     return '<p>' + paragraph;
                 }
-            }).join('');
+            }).join('<p>'); // Gabungkan kembali dengan <p> untuk mempertahankan sifat tag
             // Menampilkan isi file dengan mempertahankan sifat tag
             document.getElementById('paragraph-content').innerHTML = modifiedData;
         })
         .catch(error => console.error('Error fetching the story:', error));
     </script>
+
 
     
     <div style="color: black; opacity: 0.3; font-size: 2vw; position: fixed; bottom: 25px; left: 25px; z-index: 2; font-weight: bold; user-select: none; -moz-user-select: none; -webkit-user-select: none; -ms-user-select: none;">&copy; YOGAK B4DUT<br>Created 2024</div>
