--- a/index.html
+++ b/index.html
@@ -76,23 +76,14 @@
     <div id="paragraph-content"></div>
 
     <script>
-    // Menggunakan fetch untuk mendapatkan isi dari file story.txt
-    fetch('sc/story.txt')
-        .then(response => response.text())
-        .then(data => {
-            // Mengganti setiap 15 elemen <p> dengan <div data-mndbanid="aa9d59eb-33aa-4ad0-adc3-09ab4cc3574b"></div>
-            let paragraphs = data.split('</p>');
-            let modifiedData = '';
-            paragraphs.forEach((paragraph, index) => {
-                modifiedData += paragraph + '</p>';
-                if ((index + 1) % 15 === 0) {
-                    modifiedData += '<div data-mndbanid="aa9d59eb-33aa-4ad0-adc3-09ab4cc3574b"></div>';
-                }
-            });
-            // Menampilkan isi file dengan mempertahankan sifat tag
-            document.getElementById('paragraph-content').innerHTML = modifiedData;
-        })
-        .catch(error => console.error('Error fetching the story:', error));
+        // Menggunakan fetch untuk mendapatkan isi dari file story.txt
+        fetch('sc/story.txt')
+            .then(response => response.text())
+            .then(data => {
+                // Menampilkan isi file dengan mempertahankan sifat tag
+                document.getElementById('paragraph-content').innerHTML = data;
+            })
+            .catch(error => console.error('Error fetching the story:', error));
     </script>
     
     <div style="color: black; opacity: 0.3; font-size: 2vw; position: fixed; bottom: 25px; left: 25px; z-index: 2; font-weight: bold; user-select: none; -moz-user-select: none; -webkit-user-select: none; -ms-user-select: none;">&copy; YOGAK B4DUT<br>Created 2024</div>
