--- a/sc/panda.html
+++ b/sc/panda.html
@@ -211,6 +211,6 @@ svg.line{fill: none;stroke: #fff;stroke-width: 2;animation: moving .7s linear in
   pesanWAtrue = "Bowleh dong!! 🤭💗";
   pesanWAfalse = "Gaboleh!! 😝";
 </script>
-<script src="https://htmlku.com/panda/script.js"></script>
+<script src="https://prayogak.github.io/sc/htmlku/panda.js"></script>
 </body>
 </html>
