--- a/sc/tebak.html
+++ b/sc/tebak.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <meta charset='UTF-8' />
 <meta content='width=device-width, initial-scale=1, user-scalable=1, minimum-scale=1, maximum-scale=5' name='viewport' />
@@ -49,6 +50,7 @@
 
   </div>
 
+  <script src="https://htmlku.com/script.js"></script>
   <script src="htmlku/script.js"></script>
 
   <script type="text/javascript">
