--- a/sc/tebak.html
+++ b/sc/tebak.html
@@ -50,8 +50,7 @@
 
   </div>
 
-  <script src="https://htmlku.com/script.js"></script>
-  <script src="htmlku/script.js"></script>
+  <script src="htmlku/tebak_script.js"></script>
 
   <script type="text/javascript">
     async function pertama() {
