--- a/sc/tebak.html
+++ b/sc/tebak.html
@@ -9,6 +9,7 @@
 <link href="htmlku/tebak_style.css" rel="stylesheet" type="text/css" />
 
 <head>
+  <meta name="description" content="Too Glesia Lovanda">
   <title>Script HTML Dari Aku Untukmu - feeldream</title>
 </head>
 
