--- a/sc/tebak.html
+++ b/sc/tebak.html
@@ -10,7 +10,7 @@
 
 <head>
   <meta name="description" content="Too Glesia Lovanda">
-  <title>Script HTML Dari Aku Untukmu - feeldream</title>
+  <title>Foryou</title>
 </head>
 
 <body>
