--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="author" content="YOGAK ID">
     <meta property="og:title" content="SINGKAT CERITA CREEPY">
     <meta name="description" content="Selamat datang di labirin kegelapan, di mana cerita-cerita menyeramkan mengintai di setiap sudut layar. Siap untuk terjebak dalam kisah-kisah yang membuat malam semakin dingin.">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="sc/assets/text.css" type="text/css">
     <link rel="icon" href="sc/assets/mtgDfoGiiAtsgrc.jpg" type="image/png">
     <link rel="shortcut" href="sc/assets/mtgDfoGiiAtsgrc.jpg">
