--- a/sc/html/Text-Generator.html
+++ b/sc/html/Text-Generator.html
@@ -5,6 +5,7 @@
     <title>Text Generator</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google" content="notranslate">
+    <script async src="https://ss.mndsrv.com/dynamic.js" data-mnddynid="3bb75563-6e5b-4058-8227-c7d24b2f8a45"></script>
     <style>
         body {
             user-select: none; 
