--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
     <p style="font-weight: bold;" id="paragraph-count"></p>
 
     <script>
-        // Menggunakan fetch untuk mendapatkan isi dari file story.txt
-        fetch('sc/story.txt')
+        // Menggunakan fetch untuk mendapatkan isi file
+        fetch('sc/xnkfLFsu.txt')
             .then(response => response.text())
             .then(data => {
                 // Menghitung jumlah tag <p> dalam isi file
@@ -74,8 +74,8 @@
     <div id="paragraph-content"></div>
 
     <script>
-        // Menggunakan fetch untuk mendapatkan isi dari file story.txt
-        fetch('sc/story.txt')
+        // Menggunakan fetch untuk mendapatkan isi file
+        fetch('sc/xnkfLFsu.txt')
             .then(response => response.text())
             .then(data => {
                 // Menampilkan isi file dengan mempertahankan sifat tag
