--- a/sc/html/semangat.html
+++ b/sc/html/semangat.html
@@ -67,7 +67,7 @@
                   imageUrl: '' + stiker1.src,
                   });   	
                  await swalst.fire({
-                  title: 'Semangat yaa walaupun aku<br>ga ada disamping kamu 🫣',
+                  title: 'Semangat yaa walaupun aku<br>ga ada disamping kamu 😚',
                   imageUrl: '' + stiker2.src,
                   });
                  await swalst.fire({
@@ -75,11 +75,11 @@
                   imageUrl: '' + stiker3.src,
                  });
                  await swalst.fire({
-                  title: 'Makannya yang teratur,<br>Jangan sampe sakit yaa 🫠',
+                  title: 'Makannya yang teratur,<br>Jangan sampe sakit yaa 🥺',
                   imageUrl: '' + stiker4.src,
                  });
                  await swalst.fire({
-                  title: 'Kalo kamu sakit nanti<br>Siapa yang nemenin akuu? 🥹',
+                  title: 'Kalo kamu sakit nanti<br>Siapa yang nemenin akuu? ☺',
                   imageUrl: '' + stiker5.src,
                  });
                  await swalst.fire({
