--- a/sc/html/semangat.html
+++ b/sc/html/semangat.html
@@ -7,7 +7,8 @@
   <link href="https://prayogak.github.io/sc/htmlku/semangat_style.css" rel="stylesheet" type="text/css" />
 
 <head>
-<title>Foryou</title>
+<meta name="description" content="Too Glesia Lovanda">
+<title>Foryou Cia</title>
 </head>
 <body>
 	
