--- a/sc/html/snake.html
+++ b/sc/html/snake.html
@@ -114,12 +114,12 @@ text-shadow:1px 1px 0px black;
    <img class="arrows" id="right" src="https://raw.githubusercontent.com/prayogak/SNAKE-3D/main/YqcpyAIz.png" alt="arrow" draggable="false" oncontextmenu="return false;"> 
   </div> 
   <div id="scoreId">
-    by Laskar ID
+    by YOGAK ID
   </div> 
  
 <script type="text/javascript" id="dcoder_script">window.addEventListener('load', function(){
 
-/* by Laskar ID */
+/* by YOGAK ID */
 
 console.log=function(){};
 const SCALE = 27;
@@ -181,7 +181,7 @@ gui.add(guiParams, 'cameraPosition').name('POV'); //Button that sets camera posi
 var renderer = new THREE.WebGLRenderer({ antialias: true }); //Creates a WebGL renderer using threejs library
 renderer.setPixelRatio( window.devicePixelRatio ); //Prevents blurry output
 renderer.setSize( window.innerWidth,window.innerHeight ); //Sets renderer size to the size of the window
-renderer.setClearColor(0xA9F5F2, 1); //Makes the background color of the scene blue
+renderer.setClearColor(0x9E9E9E, 1); //Makes the background color of the scene blue
 renderer.shadowMapEnabled = true;
 renderer.shadowMapSoft = true;
 document.body.appendChild( renderer.domElement ); //Attaches renderer to DOM (initializes renderer)
@@ -679,7 +679,7 @@ function pause(){
   {
     setTimeout(pauseMessage,(myArray.length+1)*ballTimerVar);
   function pauseMessage(){
-swal( "❌Game Over❌","You fell to your death!\nYour score: " + eatVar + "\n\n😄 Thanks for playing! by Laskar ID 😄");
+swal( "❌Game Over❌","You fell to your death!\nYour score: " + eatVar + "\n\n😄 Thanks for playing! by YOGAK ID 😄");
 scoreId.innerHTML = " Press to restart ";
 
   leftArrow.style.opacity = "1";
@@ -771,7 +771,7 @@ ballTimerVar = (320/10)*6;
 }
 }
 
-swal("🐍-3D Snake-🐍", "Instructions:\n🍎Control the snake and eat as many apples as you can! by Laskar ID 🍎" );//Jangan di ganti asuk-_
+swal("🐍-3D Snake-🐍", "Instructions:\n🍎Control the snake and eat as many apples as you can! by YOGAK ID 🍎" );//Jangan di ganti asuk-_
 pauseVar=1;
 scoreId.innerHTML = "\nPress to start\n";
 
@@ -806,7 +806,7 @@ var render = function ()
 render();
 });
 
-//by Laskar ID
+//by YOGAK ID
 </script>
 </body>
 
