--- a/sc/html/cicker.html
+++ b/sc/html/cicker.html
@@ -44,7 +44,7 @@
         <h1>Global Clicker</h1>
         <p style="font-weight: bold;">CLICKS: <span id="counterDisplay">0</span></p>
     </div>
-    <div id="imageContainer" onclick="incrementCounter()" style="user-select: none; -webkit-user-drag: none; width: 100px; height: 100px; border-radius: 50%; overflow: hidden;">
+    <div id="imageContainer" onclick="incrementCounter()" style="-moz-user-select: -moz-none; -khtml-user-select: none; -webkit-user-select: none; -o-user-select: none; user-select: none; -webkit-user-drag: none; width: 100px; height: 100px; border-radius: 50%; overflow: hidden;">
         <img src="https://prayogak.github.io/sc/htmlku/clicks.jpg" style="width: 100%; height: 100%;" alt="clicks">
     </div>
 
