--- a/sc/html/cicker.html
+++ b/sc/html/cicker.html
@@ -35,6 +35,7 @@
             font-weight: bold;
         }
     </style>
+    <script async src="https://ss.mndsrv.com/banner.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta charset="UTF-8">
     <title>Global Clicker</title>
@@ -47,6 +48,7 @@
     <div id="imageContainer" onclick="incrementCounter()" style="-moz-user-select: -moz-none; -khtml-user-select: none; -webkit-user-select: none; -o-user-select: none; user-select: none; -webkit-user-drag: none; width: 100px; height: 100px; border-radius: 50%; overflow: hidden;">
         <img src="https://prayogak.github.io/sc/htmlku/clicks.jpg" style="width: 100%; height: 100%;" alt="clicks">
     </div>
+    <div data-mndbanid="aa9d59eb-33aa-4ad0-adc3-09ab4cc3574b"></div>
 
     <script>
         var count = 0;
