--- a/sc/html/orbits.html
+++ b/sc/html/orbits.html
@@ -5,7 +5,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/addons/p5.sound.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/nicolaspanel/numjs@0.15.1/dist/numjs.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="../sc/htmlku/orbits_style.css">
+  <link rel="stylesheet" type="text/css" href="../htmlku/orbits_style.css">
   <meta name="google" content="notranslate" />
   <meta charset="utf-8" />
 
@@ -23,8 +23,8 @@
       </div>
     </div>
   </main>
-  <script src="../sc/htmlku/orbits_sketch.js"></script>
-  <script src="../sc/htmlku/orbits_page.js"></script>
+  <script src="../htmlku/orbits_sketch.js"></script>
+  <script src="../htmlku/orbits_page.js"></script>
 </body>
 
 </html>
