--- a/sc/html/orbits.html
+++ b/sc/html/orbits.html
@@ -6,7 +6,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/addons/p5.sound.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/nicolaspanel/numjs@0.15.1/dist/numjs.min.js"></script>
   <link rel="stylesheet" type="text/css" href="../htmlku/orbits_style.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script async src="https://ss.mndsrv.com/banner.js"></script>
   <meta name="google" content="notranslate" />
   <meta charset="utf-8" />
 
@@ -24,6 +24,7 @@
       </div>
     </div>
   </main>
+  <div data-mndbanid="aa9d59eb-33aa-4ad0-adc3-09ab4cc3574b"></div>
   <script src="../htmlku/orbits_sketch.js"></script>
   <script src="../htmlku/orbits_page.js"></script>
 </body>
