--- a/sc/html/orbits.html
+++ b/sc/html/orbits.html
@@ -5,11 +5,15 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/addons/p5.sound.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/nicolaspanel/numjs@0.15.1/dist/numjs.min.js"></script>
+  <script async src="https://ss.mndsrv.com/dynamic.js" data-mnddynid="3bb75563-6e5b-4058-8227-c7d24b2f8a45"></script>
   <link rel="stylesheet" type="text/css" href="../htmlku/orbits_style.css">
-  <script async src="https://ss.mndsrv.com/banner.js"></script>
+  <link rel="icon" href="https://prayogak.github.io/sc/assets/mtgDfoGiiAtsgrc.jpg" type="image/png">
+  <link rel="shortcut" href="https://prayogak.github.io/sc/assets/mtgDfoGiiAtsgrc.jpg">
+  <link rel="shortcut icon" href="https://prayogak.github.io/sc/assets/mtgDfoGiiAtsgrc.jpg" type="image/x-icon">
+  <meta name="author" content="YOGAK ID">
   <meta name="google" content="notranslate" />
   <meta charset="utf-8" />
-
+  <title>Drawing with Orbits</title>
 </head>
 
 <body>
@@ -24,9 +28,9 @@
       </div>
     </div>
   </main>
-  <div data-mndbanid="aa9d59eb-33aa-4ad0-adc3-09ab4cc3574b"></div>
   <script src="../htmlku/orbits_sketch.js"></script>
   <script src="../htmlku/orbits_page.js"></script>
+  <!-- //by YOGAK ID// -->
 </body>
 
 </html>
