--- a/sc/html/kamuapa.html
+++ b/sc/html/kamuapa.html
@@ -48,7 +48,7 @@
       </div>
       
       <div id="scroll-container" class="blocktext txt transition scale0">
-        <p id="textsec2" class="anm itim"><span class="gariskuning">kamu sangat istimewa bagiku</span>, aku bahkan tidak bisa menjelaskan betapa beruntungnya aku memiliki kamu dalam hidupku, kamu benar-benar sempurna dengan cara kecilmu sendiri seperti senyum kamu, tawa kamu, suara kamu, dan setiap hal tentangmu luar biasa. 😚😍😋🤍<br><br><b class="putih merah">i love you ta terhitung >></b></p>
+        <p id="textsec2" class="anm itim"><span class="gariskuning">kamu sangat istimewa bagiku</span>, aku bahkan tidak bisa menjelaskan betapa beruntungnya aku memiliki kamu dalam hidupku, kamu benar-benar sempurna dengan cara kecilmu sendiri seperti senyum kamu, tawa kamu, suara kamu, dan setiap hal tentangmu luar biasa. Love Too Cia ♡<br>😚😍😋🤍<br><br><b class="putih merah">i love you ta terhitung >></b></p>
       </div>
   </section>
   <!-- //YOGAK ID// -->
