--- a/sc/html/snake.html
+++ b/sc/html/snake.html
@@ -7,9 +7,9 @@
   <meta name="description" content="Game Snake 3D HTML klasik adalah versi dari permainan legendaris Snake. Pemain akan mengendalikan seekor ular yang berkelana di dalam lingkungan tiga dimensi, mengumpulkan makanan untuk tumbuh lebih panjang, sembari menghindari ekor ularnya. Dengan gameplay yang sederhana dan kenangan yang klasik, game ini mempertahankan suasana kalsik, mengingatkan kita pada kegembiraan permainan Snake yang tak pernah pudar.">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.2/dat.gui.min.js"></script> 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/92/three.js"></script> 
-  <script src="https://dl.dropbox.com/s/nn9wz6aimz6vzoi/OBJLoader.js"></script> 
-  <script src="https://dl.dropbox.com/s/2821pj5wkc2b8pe/MTLLoader.js"></script> 
-  <script src="https://dl.dropbox.com/s/qxgrvxduynnst3u/OrbitControls.js"></script> 
+  <script src="../htmlku/OBJLoader.js"></script> 
+  <script src="../htmlku/MTLLoader.js"></script> 
+  <script src="../htmlku/OrbitControls.js"></script> 
  <style type="text/css" id="dcoder_stylesheet">body{
   height:100%;
   width:100%;
@@ -114,7 +114,7 @@ text-shadow:1px 1px 0px black;
    <img class="arrows" id="right" src="https://raw.githubusercontent.com/prayogak/SNAKE-3D/main/YqcpyAIz.png" alt="arrow" draggable="false" oncontextmenu="return false;"> 
   </div> 
   <div id="scoreId">
-    by YOGAK ID
+    YOGAK ID
   </div> 
  
 <script type="text/javascript" id="dcoder_script">window.addEventListener('load', function(){
