--- a/sc/html/snake.html
+++ b/sc/html/snake.html
@@ -114,7 +114,7 @@ text-shadow:1px 1px 0px black;
    <img class="arrows" id="right" src="https://raw.githubusercontent.com/prayogak/SNAKE-3D/main/YqcpyAIz.png" alt="arrow" draggable="false" oncontextmenu="return false;"> 
   </div> 
   <div id="scoreId">
-    YOGAK ID
+    SNAKE GAME
   </div> 
  
 <script type="text/javascript" id="dcoder_script">window.addEventListener('load', function(){
