--- a/sc/html/snake.html
+++ b/sc/html/snake.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" class="notranslate" translate="no">
 
  <head> 
   <title>SNAKE 3D</title> 
   <meta name="viewport" charset="UTF-8" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" initial-scale="1.0," maximum-scale="1.0," user-scalable="0&quot;"> 
+  <meta name="google" content="notranslate">
+  <meta name="author" content="YOGAK ID">
   <meta name="description" content="Game Snake 3D HTML klasik adalah versi dari permainan legendaris Snake. Pemain akan mengendalikan seekor ular yang berkelana di dalam lingkungan tiga dimensi, mengumpulkan makanan untuk tumbuh lebih panjang, sembari menghindari ekor ularnya. Dengan gameplay yang sederhana dan kenangan yang klasik, game ini mempertahankan suasana kalsik, mengingatkan kita pada kegembiraan permainan Snake yang tak pernah pudar.">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.2/dat.gui.min.js"></script> 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/92/three.js"></script> 
