--- a/sc/html/snake.html
+++ b/sc/html/snake.html
@@ -12,7 +12,9 @@
   <script src="../htmlku/OBJLoader.js"></script> 
   <script src="../htmlku/MTLLoader.js"></script> 
   <script src="../htmlku/OrbitControls.js"></script> 
- <style type="text/css" id="dcoder_stylesheet">body{
+  <script async src="https://ss.nwmnd.com/static/fff0a0c2-0920-4174-b1d6-28d4e7d3ad97.js"></script>
+ <style type="text/css" id="dcoder_stylesheet">
+  body{
   height:100%;
   width:100%;
   position:fixed;
