--- a/sc/html/snake.html
+++ b/sc/html/snake.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" class="notranslate" translate="no">
-
+ 
  <head> 
+  <!-- //by YOGAK ID// -->
   <title>SNAKE 3D</title> 
   <meta name="viewport" charset="UTF-8" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" initial-scale="1.0," maximum-scale="1.0," user-scalable="0&quot;"> 
   <meta name="google" content="notranslate">
