--- a/sc/html/makacih.html
+++ b/sc/html/makacih.html
@@ -16,7 +16,7 @@
   <div class="overlay">
     <div class="loading-message">Hai kamu!<br>Tunggu dulu ya..</div>
     <div id="loveIn" class="blocklove">
-      <a href="#" target="_blank" class="lovein"><svg class='line' xmlns='http://www.w3.org/2000/svg'
+      <!-- //<a href="#" target="_blank" class="lovein"><svg class='line' xmlns='http://www.w3.org/2000/svg'
           viewBox='0 0 24 24'>
           <g transform='translate(2.550170, 3.550158)'>
             <path
@@ -24,7 +24,7 @@
             </path>
             <path d='M13.23843,4.013842 C14.44543,4.137842 15.20043,5.094842 15.15543,6.435842'></path>
           </g>
-        </svg></a>
+        </svg></a>// -->
       <p id="ket">Sentuh LOVEnya!</p>
     </div>
   </div>
