--- a/sc/html/makacih.html
+++ b/sc/html/makacih.html
@@ -16,7 +16,7 @@
   <div class="overlay">
     <div class="loading-message">Hai kamu!<br>Tunggu dulu ya..</div>
     <div id="loveIn" class="blocklove">
-      <div href="#" target="_blank" class="lovein"><svg class='line' xmlns='http://www.w3.org/2000/svg'
+      <div class="lovein"><svg class='line' xmlns='http://www.w3.org/2000/svg'
           viewBox='0 0 24 24'>
           <g transform='translate(2.550170, 3.550158)'>
             <path
