--- a/sc/html/orbits.html
+++ b/sc/html/orbits.html
@@ -11,9 +11,9 @@
   <link rel="shortcut" href="https://prayogak.github.io/sc/assets/mtgDfoGiiAtsgrc.jpg">
   <link rel="shortcut icon" href="https://prayogak.github.io/sc/assets/mtgDfoGiiAtsgrc.jpg" type="image/x-icon">
   <meta name="author" content="YOGAK ID">
-  <meta name="google" content="notranslate" />
-  <meta charset="utf-8" />
-  <title>Drawing with Orbits</title>
+  <meta name="google" content="notranslate">
+  <meta charset="utf-8">
+  <title>Drawing With Orbits</title>
 </head>
 
 <body>
