--- a/sc/html/tebak.html
+++ b/sc/html/tebak.html
@@ -6,41 +6,41 @@
 
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.19/dist/sweetalert2.all.min.js"></script>
 <script src="https://unpkg.com/typeit@8.7.0/dist/index.umd.js"></script>
-<link href="https://prayogak.github.io/sc/htmlku/tebak_style.css" rel="stylesheet" type="text/css" />
+<link href="../htmlku/tebak_style.css" rel="stylesheet" type="text/css" />
 
 <head>
   <meta name="description" content="Too Glesia Lovanda">
-  <title>Foryou</title>
+  <title>Glesia Lovanda 💝</title>
 </head>
 
 <body>
 
   <div id="bodyblur">
     <!-- Wallpaper -->
-    <img src="https://prayogak.github.io/sc/htmlku/59322651d268eae9ebb4359bea4e8dde.jpg" id="wallpaper" />
+    <img src="../htmlku/59322651d268eae9ebb4359bea4e8dde.jpg" id="wallpaper" />
   </div>
 
   <div class="kumpulanstiker">
     <!-- Stiker untuk Konten Awal -->
-    <img src="https://prayogak.github.io/sc/htmlku/pusn2.gif" id="stiker1" />
-    <img src="https://prayogak.github.io/sc/htmlku/pandahiya.gif" id="stiker2" />
-    <img src="https://prayogak.github.io/sc/htmlku/mikir.gif" id="stiker3" />
-    <img src="https://prayogak.github.io/sc/htmlku/images-9.jpg" id="stiker4" />
-    <img src="https://prayogak.github.io/sc/htmlku/ngumpet.gif" id="stiker5" />
+    <img src="../htmlku/pusn2.gif" id="stiker1" />
+    <img src="../htmlku/pandahiya.gif" id="stiker2" />
+    <img src="../htmlku/mikir.gif" id="stiker3" />
+    <img src="../htmlku/images-9.jpg" id="stiker4" />
+    <img src="../htmlku/ngumpet.gif" id="stiker5" />
   </div>
 
   <div id='Content'>
 
     <!-- Tombol Surat -->
     <div id="suratin" onClick="memulai();audio.play();">
-      <img src="https://prayogak.github.io/sc/htmlku/envelope.png" />
+      <img src="../htmlku/envelope.png" />
     </div>
     <p id="ket">Klik Suratnya!</p>
 
     <div>
     <!-- Stiker untuk Konten Akhir -->
-      <img src="https://prayogak.github.io/sc/htmlku/weee.gif" id="fotoakhir" />
-      <img src="https://prayogak.github.io/sc/htmlku/emawh.gif" id="fotoakhir2" />
+      <img src="../htmlku/weee.gif" id="fotoakhir" />
+      <img src="../htmlku/emawh.gif" id="fotoakhir2" />
     </div>
 
     <div>
@@ -52,11 +52,11 @@
 
   </div>
 
-  <script src="https://prayogak.github.io/sc/htmlku/tebak_script.js"></script>
+  <script src="../htmlku/tebak_script.js"></script>
 
   <script type="text/javascript">
     async function pertama() {
-      audio = new Audio('https://prayogak.github.io/sc/htmlku/5VfcVfr1D3fIU8m27X85m5HVkPyRIhQr.mp3'); showDiv();
+      audio = new Audio('../htmlku/5VfcVfr1D3fIU8m27X85m5HVkPyRIhQr.mp3'); showDiv();
     } pertama();
 
 
