--- a/sc/html/mautau.html
+++ b/sc/html/mautau.html
@@ -26,7 +26,7 @@
    
   <section class="first">
        <div class="wp"><img src="../htmlku/nightcar.jpg"/></div>
-       <img id="first_stiker" class="stiker fade-in" src="../htmlkupandapintu2.gif"/>
+       <img id="first_stiker" class="stiker fade-in" src="../htmlku/pandapintu2.gif"/>
        <h1 class="title">Hai Kamu! 😍</h1>
        <p class="flip">Ada hal yang mau aku sampein..</p>
        <p class="slide-up"><i>Scroll ke bawah yaa! ✨</i></p>
