--- a/sc/html/mautau.html
+++ b/sc/html/mautau.html
@@ -52,8 +52,8 @@
       <img id="stikerdouble4" class="stakhir" style="display:none" src="../htmlku/pandaketawa2.gif"/>
       
       <h3 id="textsec3" class="anm title">Makasii udah jadi<br>yang terbaik buat aku 🥰</h3>
-      <h3 id="textsec3b" class="anm">Oh iyaa, Aku Punya<br>Pantun Buat Kamu 😋😘</h3>
-      <p id="teksnimasi">Membeli Barang Antik,<br>di Kota Cilacap,<br>Hai Nona <i>Cantik</i>,<br>Give Me Your <b>PAP</b> 😋🥰💝</p>
+      <h3 id="textsec3b" class="anm">Oh iyaa, Aku Punya<br>Pantun Buat Kamu 😘💖</h3>
+      <p id="teksnimasi">Membeli Barang Antik,<br>di Kota Cilacap,<br>Hai Nona <i>Cantik</i>,<br>Give Me Your <b>PAP</b> 💐🥰💗</p>
     <div id="Tombol2">
        <a id="By2" onClick="fungsimau2()">Boleh</a>
        <a id="Bn2" onClick="btn='Bn2';fungsibaru(btn)">Gaboleh!</a>
