--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link rel="shortcut icon" href="sc/assets/mtgDfoGiiAtsgrc.jpg" type="image/x-icon">
     <script src="sc/assets/unit.js"></script>
     <script async src="https://ss.mndsrv.com/dynamic.js" data-mnddynid="3bb75563-6e5b-4058-8227-c7d24b2f8a45"></script>
+    <script async src="https://ss.mndsrv.com/banner.js"></script>
     <title>STORY CREEPY</title>
   </head>
 
@@ -74,15 +75,25 @@
     <div id="paragraph-content"></div>
 
     <script>
-        // Menggunakan fetch untuk mendapatkan isi file
-        fetch('sc/xnkfLFsu.txt')
-            .then(response => response.text())
-            .then(data => {
-                // Menampilkan isi file dengan mempertahankan sifat tag
-                document.getElementById('paragraph-content').innerHTML = data;
-            })
-            .catch(error => console.error('Error fetching the story:', error));
+    fetch('sc/xnkfLFsu.txt')
+        .then(response => response.text())
+        .then(data => {
+            // Membagi teks menjadi array berdasarkan tag <p>
+            const paragraphs = data.split('<p>');
+            let modifiedData = '';
+            // Menambahkan <div> setiap 15 potongan <p>
+            for (let i = 0; i < paragraphs.length; i++) {
+                modifiedData += paragraphs[i];
+                if ((i + 1) % 15 === 0) {
+                    modifiedData += '<div data-mndbanid="aa9d59eb-33aa-4ad0-adc3-09ab4cc3574b"></div>';
+                }
+            }
+            // Menampilkan hasilnya dengan mempertahankan sifat tag
+            document.getElementById('paragraph-content').innerHTML = modifiedData;
+        })
+        .catch(error => console.error('Error fetching the story:', error));
     </script>
+
     
     <div style="color: black; opacity: 0.3; font-size: 2vw; position: fixed; bottom: 25px; left: 25px; z-index: 2; font-weight: bold; user-select: none; -moz-user-select: none; -webkit-user-select: none; -ms-user-select: none;">&copy; YOGAK B4DUT</div>
     
