--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
     <link rel="icon" href="sc/assets/mtgDfoGiiAtsgrc.jpg" type="image/png">
     <link rel="shortcut" href="sc/assets/mtgDfoGiiAtsgrc.jpg">
     <link rel="shortcut icon" href="sc/assets/mtgDfoGiiAtsgrc.jpg" type="image/x-icon">
-    <script src="sc/assets/unit.js"></script>
     <script async src="https://ss.mndsrv.com/dynamic.js" data-mnddynid="3bb75563-6e5b-4058-8227-c7d24b2f8a45"></script>
     <script async src="https://ss.mndsrv.com/banner.js"></script>
     <title>STORY CREEPY</title>
@@ -54,6 +53,12 @@
   
   <body style="background-color: white; font-family: 'Times New Roman', Times, serif; color: black; text-align: justify;">
 
+    <div id="foter" class="foter" style="position: absolute; top: 70px; left: -225px; width: 600px; height: 28px; margin: 0px; padding: 10px; font-size: 24px; text-align: center; color: rgb(255, 255, 255); font-family: &quot;trebuchet ms&quot;, Courier new, courier new, sans-serif; transform: rotate(-45deg); transform-origin: 50% 0px 0px; background-color: rgb(0, 0, 0); border: 1px solid rgb(170, 170, 170); opacity: 0.5; z-index: 1200;">
+        <font face="courier new">
+            <marquee color="darkblue" behavior="Flip" scrollamount="6" width="50%" style="width: 50%;">Beta Development | Update Stories Every Week</marquee>
+        </font>
+    </div>
+      
     <h1 style="text-align: center;" class="text-redan">B4DUT CORE</h1>
 
     <p style="font-weight: bold;" id="paragraph-count"></p>
