--- a/index.html
+++ b/index.html
@@ -55,9 +55,12 @@
 
     <div id="foter" class="foter" style="position: absolute; top: 70px; left: -225px; width: 600px; height: 28px; margin: 0px; padding: 10px; font-size: 24px; text-align: center; color: rgb(255, 255, 255); font-family: &quot;trebuchet ms&quot;, Courier new, courier new, sans-serif; transform: rotate(-45deg); transform-origin: 50% 0px 0px; background-color: rgb(0, 0, 0); border: 1px solid rgb(170, 170, 170); opacity: 0.5; z-index: 1200;">
         <font face="courier new">
-            <marquee color="darkblue" behavior="Flip" scrollamount="6" width="50%" style="width: 50%;">Beta Development | Update Stories Every Week</marquee>
+            <marquee color="darkblue" width="50%" style="width: 50%;">
+                Beta Development | Update Stories Every Week
+            </marquee>
         </font>
     </div>
+
       
     <h1 style="text-align: center;" class="text-redan">B4DUT CORE</h1>
 
