--- a/index.html
+++ b/index.html
@@ -53,14 +53,13 @@
   
   <body style="background-color: white; font-family: 'Times New Roman', Times, serif; color: black; text-align: justify;">
 
-    <div id="foter" class="foter" style="position: absolute; top: 70px; left: -225px; width: 600px; height: 28px; margin: 0px; padding: 10px; font-size: 24px; text-align: center; color: rgb(255, 255, 255); font-family: &quot;trebuchet ms&quot;, Courier new, courier new, sans-serif; transform: rotate(-45deg); transform-origin: 50% 0px 0px; background-color: rgb(0, 0, 0); border: 1px solid rgb(170, 170, 170); opacity: 0.5; z-index: 1200;">
+    <div id="foter" class="foter" style="position: fixed; top: 70px; left: -225px; width: 600px; height: 28px; margin: 0px; padding: 10px; font-size: 24px; text-align: center; color: rgb(255, 255, 255); font-family: 'trebuchet ms', Courier new, courier new, sans-serif; transform: rotate(-45deg); transform-origin: 50% 0px 0px; background-color: rgb(0, 0, 0); border: 1px solid rgb(170, 170, 170); opacity: 0.5; z-index: 1200; overflow: hidden;">
         <font face="courier new">
-            <marquee color="darkblue" width="50%" style="width: 50%;">
+            <marquee color="darkblue" behavior="Flip" scrollamount="6" width="50%" style="width: 50%;">
                 Beta Development | Update Stories Every Week
             </marquee>
         </font>
     </div>
-
       
     <h1 style="text-align: center;" class="text-redan">B4DUT CORE</h1>
 
