--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 
   <head>
     <meta charset="UTF-8">
+    <meta name="theme-color" content="#343a40">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google" content="notranslate">
-    <meta name="mnd-ver" content="ou7cuvdpl2cyz20gpnzmvw">
     <meta name="author" content="YOGAK ID">
+    <meta name="mnd-ver" content="ou7cuvdpl2cyz20gpnzmvw">
     <meta property="og:title" content="SINGKAT CERITA CREEPY">
     <meta name="description" content="Selamat datang di labirin kegelapan, di mana cerita-cerita menyeramkan mengintai di setiap sudut layar. Siap untuk terjebak dalam kisah-kisah yang membuat malam semakin dingin.">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
