--- a/index.html
+++ b/index.html
@@ -93,6 +93,15 @@
             .catch(error => console.error('Error fetching the story:', error));
     </script>
 
+    <footer style="background-color: #343a40; color: white; padding: 20px;">
+        <ul style="list-style-type: none; padding: 0;">
+            <li><a href="https://prayogak.github.io/sc/html/tentang.html" target="_blank">Tentang</a></li>
+            <li><a href="https://prayogak.github.io/sitemaps.html" target="_blank">Sitemaps</a></li>
+            <li><a href="mailto:yogakprik@gmail.com" target="_blank">Kontak</a></li>
+        </ul>
+    </footer>
+
+
     <div style="color: black; opacity: 0.3; font-size: 2vw; position: fixed; bottom: 25px; left: 25px; z-index: 2; font-weight: bold; user-select: none; -moz-user-select: none; -webkit-user-select: none; -ms-user-select: none;">&copy; YOGAK B4DUT</div>
     
     <!-- //<img alt="MaGNEkzSzpnmecw.gif" src="sc/assets/MaGNEkzSzpnmecw.gif">// -->
