--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
     <footer style="background-color: #343a40; color: white; padding: 20px;">
         <ul style="list-style-type: none; padding: 0;">
-            <li><a href="https://prayogak.github.io/sc/html/tentang.html" target="_blank">Tentang</a></li>
+            <li><a href="https://prayogak.github.io/tentang.html" target="_blank">Tentang</a></li>
             <li><a href="https://prayogak.github.io/sitemaps.html" target="_blank">Sitemaps</a></li>
             <li><a href="mailto:yogakprik@gmail.com" target="_blank">Kontak</a></li>
         </ul>
