--- a/tentang.html
+++ b/tentang.html
@@ -14,7 +14,7 @@
     <div class="footer-greetings">
           <marquee>
           <p>
-            <font size="2"><b>ACHIEVEMENT</b></font>
+            <font size="2"><b>TENTANG</b></b></font>
           </p>
           <p>
             <font size="2">
