--- a/index.html
+++ b/index.html
@@ -93,12 +93,13 @@
             .catch(error => console.error('Error fetching the story:', error));
     </script>
 
-    <footer style="background-color: #343a40; color: white; padding: 20px;">
-        <ul style="list-style-type: none; padding: 0;">
+    <footer style="background-color: #ffffff; color: white; padding: 20px;">
+        <p>Website ini menyediakan cerita-cerita creepy sebagai hiburan semata. Harap diingat bahwa semua cerita yang terdapat di sini adalah fiksi belaka. Tujuan utama dari situs ini adalah untuk memberikan pengalaman hiburan kepada pengunjungnya. Mohon diinterpretasikan dengan bijak agar tidak menimbulkan kesalahpahaman. </p>
+        <ol style="list-style-type: none; padding: 0;">
             <li><a href="https://prayogak.github.io/tentang.html" target="_blank">Tentang</a></li>
             <li><a href="https://prayogak.github.io/sitemaps.html" target="_blank">Sitemaps</a></li>
             <li><a href="mailto:yogakprik@gmail.com" target="_blank">Kontak</a></li>
-        </ul>
+        </ol>
     </footer>
 
 
