--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="shortcut" href="sc/assets/mtgDfoGiiAtsgrc.jpg">
     <link rel="shortcut icon" href="sc/assets/mtgDfoGiiAtsgrc.jpg" type="image/x-icon">
     <script async src="https://ss.mndsrv.com/dynamic.js" data-mnddynid="3bb75563-6e5b-4058-8227-c7d24b2f8a45"></script>
-    <script async src="https://ss.mndsrv.com/banner.js"></script>
+    <script async src="https://ss.nwmnd.com/interstitial.js" data-mndintid="4caa82de-1791-4d7c-ab4e-328ac420b4b5"></script>
     <title>STORY CREEPY</title>
   </head>
 
