--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
       
     <h1 style="text-align: center;" class="text-redan">B4DUT CORE</h1>
 
+    <p style="font-family: 'trebuchet ms', Courier new, courier new, sans-serif; text-align: center;">Created 2024</p>
+
     <p style="font-weight: bold;" id="paragraph-count"></p>
 
     <script>
