--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
       margin: 0;
       padding: 10px; /* Atur padding sesuai yang diinginkan */
     }
+    header {
+    background-color: #343a40;
+    width: 100%;
+    height: 80px; /* Sesuaikan dengan tinggi yang diinginkan */
+    } 
     img {
       max-width: 100%;
       height: auto;
@@ -61,9 +66,10 @@
         </font>
     </div>
       
-    <h1 style="text-align: center;" class="text-redan">B4DUT CORE</h1>
-
-    <p style="font-family: 'trebuchet ms', Courier new, courier new, sans-serif; text-align: center;">Created 2024</p>
+    <header>  
+        <h1 style="text-align: center;" class="text-redan">B4DUT CORE</h1>
+        <div style="font-family: 'trebuchet ms', Courier new, courier new, sans-serif; text-align: center;">Created 2024</div>
+    </header>
 
     <p style="font-weight: bold;" id="paragraph-count"></p>
 
