--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
     </div>
       
     <header>  
-        <h1 style="text-align: center;" class="text-redan">B4DUT CORE</h1>
-        <div style="font-family: 'trebuchet ms', Courier new, courier new, sans-serif; text-align: center;">Created 2024</div>
+        <div style="text-align: center; font-size: 16px;" class="text-redan">B4DUT CORE</h1>
+        <div style="font-family: 'trebuchet ms', Courier new, courier new, sans-serif; color: white; text-align: center;">Created 2024</div>
     </header>
 
     <p style="font-weight: bold;" id="paragraph-count"></p>
