--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </div>
       
     <header>  
-        <div style="text-align: center; font-size: 16px;" class="text-redan">B4DUT CORE</h1>
+        <div style="text-align: center; font-size: 32px;" class="text-redan">B4DUT CORE</div>
         <div style="font-family: 'trebuchet ms', Courier new, courier new, sans-serif; color: white; text-align: center;">Created 2024</div>
     </header>
 
