--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
     </div>
       
     <header>  
-        <div style="text-align: center; font-size: 32px;" class="text-redan">B4DUT CORE</div>
-        <div style="font-family: 'trebuchet ms', Courier new, courier new, sans-serif; color: white; text-align: center;">Created 2024</div>
+        <p style="text-align: center; color: white; font-size: 32px;" class="text-redan">B4DUT CORE</p>
+        <p style="font-family: 'trebuchet ms', Courier new, courier new, sans-serif; color: white; text-align: center;">Created 2024</p>
     </header>
 
     <p style="font-weight: bold;" id="paragraph-count"></p>
