--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
     img[alt="otakdark.github.io"]{display:none;}
     body {
       margin: 0;
-      padding: 10px; /* Atur padding sesuai yang diinginkan */
+      padding: 10px; 
     }
-    header {
+    .header {
     background-color: #343a40;
     width: 100%;
-    height: 80px; /* Sesuaikan dengan tinggi yang diinginkan */
-    } 
+    height: auto; 
+    }
     img {
       max-width: 100%;
       height: auto;
@@ -67,8 +67,8 @@
     </div>
       
     <header>  
-        <p style="text-align: center; color: white; font-size: 32px;" class="text-redan">B4DUT CORE</p>
-        <p style="font-family: 'trebuchet ms', Courier new, courier new, sans-serif; color: white; text-align: center;">Created 2024</p>
+        <div style="text-align: center; color: white; font-size: 32px;" class="text-redan">B4DUT CORE</div>
+        <div style="font-family: 'trebuchet ms', Courier new, courier new, sans-serif; color: white; text-align: center;">Created 2024</div>
     </header>
 
     <p style="font-weight: bold;" id="paragraph-count"></p>
