--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       margin: 0;
       padding: 10px; 
     }
-    .header {
+    header {
     background-color: #343a40;
     width: 100%;
     height: auto; 
