--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <link rel="icon" href="sc/assets/mtgDfoGiiAtsgrc.jpg" type="image/png">
     <link rel="shortcut" href="sc/assets/mtgDfoGiiAtsgrc.jpg">
     <link rel="shortcut icon" href="sc/assets/mtgDfoGiiAtsgrc.jpg" type="image/x-icon">
+    <script src="https://prayogak.github.io/sc/assets/times.js"></script>
     <script async src="https://ss.nwmnd.com/interstitial.js" data-mndintid="4caa82de-1791-4d7c-ab4e-328ac420b4b5"></script>
     <title>STORY CREEPY</title>
   </head>
@@ -100,7 +101,7 @@
             .catch(error => console.error('Error fetching the story:', error));
     </script>
 
-    <div style="color: black; opacity: 0.3; font-size: 2vw; position: fixed; bottom: 25px; left: 25px; z-index: 2; font-weight: bold; user-select: none; -moz-user-select: none; -webkit-user-select: none; -ms-user-select: none;">&copy; YOGAK B4DUT</div>
+    <div style="color: black; opacity: 0.3; font-size: 2vw; position: fixed; bottom: 25px; left: 25px; z-index: 2; font-weight: bold; user-select: none; -moz-user-select: none; -webkit-user-select: none; -ms-user-select: none;">&copy; YOGAK B4DUT | <span id="waktu"></span></div>
     
     <!-- //<img alt="MaGNEkzSzpnmecw.gif" src="sc/assets/MaGNEkzSzpnmecw.gif">// -->
       
