--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             .catch(error => console.error('Error fetching the story:', error));
     </script>
 
-    <div style="color: black; opacity: 0.3; font-size: 2vw; position: fixed; bottom: 25px; left: 25px; z-index: 2; font-weight: bold; user-select: none; -moz-user-select: none; -webkit-user-select: none; -ms-user-select: none;">&copy; YOGAK B4DUT | <span id="waktu"></span></div>
+    <div style="color: black; opacity: 0.3; font-size: 2vw; position: fixed; bottom: 25px; left: 25px; z-index: 2; font-weight: bold; user-select: none; -moz-user-select: none; -webkit-user-select: none; -ms-user-select: none;">&copy; YOGAK B4DUT - <span id="waktu"></span></div>
     
     <!-- //<img alt="MaGNEkzSzpnmecw.gif" src="sc/assets/MaGNEkzSzpnmecw.gif">// -->
       
