--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link rel="icon" href="sc/assets/mtgDfoGiiAtsgrc.jpg" type="image/png">
     <link rel="shortcut" href="sc/assets/mtgDfoGiiAtsgrc.jpg">
     <link rel="shortcut icon" href="sc/assets/mtgDfoGiiAtsgrc.jpg" type="image/x-icon">
-    <script src="https://prayogak.github.io/sc/assets/times.js"></script>
+    <script src="sc/assets/times.js"></script>
     <script async src="https://ss.nwmnd.com/interstitial.js" data-mndintid="4caa82de-1791-4d7c-ab4e-328ac420b4b5"></script>
     <title>STORY CREEPY</title>
   </head>
