--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <link rel="shortcut icon" href="sc/assets/mtgDfoGiiAtsgrc.jpg" type="image/x-icon">
     <script src="sc/assets/times.js"></script>
     <script async src="https://ss.nwmnd.com/interstitial.js" data-mndintid="4caa82de-1791-4d7c-ab4e-328ac420b4b5"></script>
+    <script async src="https://ss.nwmnd.com/banner.js"></script>
     <title>STORY CREEPY</title>
   </head>
 
@@ -91,14 +92,22 @@
     <div id="paragraph-content"></div>
 
     <script>
-        // Menggunakan fetch untuk mendapatkan isi file
-        fetch('sc/xnkfLFsu.txt')
-            .then(response => response.text())
-            .then(data => {
-                // Menampilkan isi file dengan mempertahankan sifat tag
-                document.getElementById('paragraph-content').innerHTML = data;
-            })
-            .catch(error => console.error('Error fetching the story:', error));
+    // Menggunakan fetch untuk mendapatkan isi file
+    fetch('sc/xnkfLFsu.txt')
+        .then(response => response.text())
+        .then(data => {
+            // Menampilkan isi file dengan mempertahankan sifat tag
+            let parsedData = data.split('</p>'); // Memisahkan setiap tag </p>
+            let modifiedData = ''; // String untuk menyimpan data yang telah dimodifikasi
+            for (let i = 0; i < parsedData.length; i++) {
+                modifiedData += parsedData[i]; // Menambahkan tag </p> kembali ke setiap potongan data
+                if ((i + 1) % 15 === 0) { // Memeriksa apakah ini merupakan setiap tag ke-15
+                    modifiedData += '<div data-mndbanid="aa9d59eb-33aa-4ad0-adc3-09ab4cc3574b"></div>'; // Menambahkan elemen <div> setiap 15 <p>
+                }
+            }
+            document.getElementById('paragraph-content').innerHTML = modifiedData; // Menampilkan data yang telah dimodifikasi
+        })
+        .catch(error => console.error('Error fetching the story:', error));
     </script>
 
     <div style="color: black; opacity: 0.3; font-size: 2vw; position: fixed; bottom: 25px; left: 25px; z-index: 2; font-weight: bold; user-select: none; -moz-user-select: none; -webkit-user-select: none; -ms-user-select: none;">&copy; YOGAK B4DUT; <span id="waktu"></span></div>
