--- a/index.html
+++ b/index.html
@@ -102,14 +102,14 @@
             for (let i = 0; i < parsedData.length; i++) {
                 modifiedData += parsedData[i]; // Menambahkan tag </p> kembali ke setiap potongan data
                 if ((i + 1) % 15 === 0) { // Memeriksa apakah ini merupakan setiap tag ke-15
-                    modifiedData += '<div data-mndbanid="aa9d59eb-33aa-4ad0-adc3-09ab4cc3574b"></div>'; // Menambahkan elemen <div> setiap 15 <p>
+                    modifiedData += '<div data-mndbanid="aa9d59eb-33aa-4ad0-adc3-09ab4cc3574b" style="margin: 0 auto;"></div>'; // Menambahkan elemen <div> setiap 15 <p> dengan gaya pusat
                 }
             }
             document.getElementById('paragraph-content').innerHTML = modifiedData; // Menampilkan data yang telah dimodifikasi
         })
         .catch(error => console.error('Error fetching the story:', error));
     </script>
-
+    
     <div style="color: black; opacity: 0.3; font-size: 2vw; position: fixed; bottom: 25px; left: 25px; z-index: 2; font-weight: bold; user-select: none; -moz-user-select: none; -webkit-user-select: none; -ms-user-select: none;">&copy; YOGAK B4DUT; <span id="waktu"></span></div>
     
     <!-- //<img alt="MaGNEkzSzpnmecw.gif" src="sc/assets/MaGNEkzSzpnmecw.gif">// -->
