--- a/index.html
+++ b/index.html
@@ -102,6 +102,10 @@
                     modifiedData += '<div data-mndbanid="aa9d59eb-33aa-4ad0-adc3-09ab4cc3574b"></div>'; // Menambahkan elemen <div> setiap 15 <p>
                 }
             }
+            // Memeriksa apakah jumlah tag </p> habis dibagi 15, jika tidak, tambahkan <div> pada akhirnya
+            if (parsedData.length % 15 !== 0) {
+            modifiedData += '<div data-mndbanid="aa9d59eb-33aa-4ad0-adc3-09ab4cc3574b"></div>';
+            }
             document.getElementById('paragraph-content').innerHTML = modifiedData; // Menampilkan data yang telah dimodifikasi
         })
         .catch(error => console.error('Error fetching the story:', error));
