--- a/sc/html/Space-Invaders.html
+++ b/sc/html/Space-Invaders.html
@@ -190,7 +190,7 @@
 <label for="reset"></label>
 <p id="pointText">*Score Advance Table*</p>
 <ol id="points"><li>=? Mystery</li><li>=10 Points</li><li>=10 Points</li><li>=10 Points</li></ol>
-<a id="tryother" target="_blank" href="/jonslater204/pen/PopQbrz">Try basic version</a>
+<a id="tryother" target="_blank" href="/sitemaps.html">sitemaps</a>
 </div>
 <div id="browsercheck"><div><p>Your browser may not support all the features of this version</p><a target="_blank" href="/jonslater204/pen/PopQbrz">Play other version</a><label for="trybrowser">Try this version</label></div></div>
 </form>
