--- a/sc/html/dibacayuk.html
+++ b/sc/html/dibacayuk.html
@@ -22,7 +22,8 @@
    <audio src="../htmlku/nightchanges.mp3" id="linkmp3" class="sembunyi"></audio>
    
    <div id="bodyblur">
-     <!-- Wallpaper / Background --><img src="../htmlku/awan.jpg" id="wallpaper"/>
+     <!-- Wallpaper / Background -->
+	   <img src="../htmlku/32N0g64hT9I5yWCT48.jpg" id="wallpaper"/>
    </div>
    
    <div id='Content'>
