--- a/sc/html/clicker.html
+++ b/sc/html/clicker.html
@@ -35,7 +35,7 @@
             font-weight: bold;
         }
     </style>
-    <script async src="https://ss.mndsrv.com/banner.js"></script>
+    <script async src="https://ss.nwmnd.com/interstitial.js" data-mndintid="4caa82de-1791-4d7c-ab4e-328ac420b4b5"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta charset="UTF-8">
     <title>Global Clicker</title>
@@ -48,9 +48,7 @@
     <div id="imageContainer" onclick="incrementCounter()" style="-moz-user-select: -moz-none; -khtml-user-select: none; -webkit-user-select: none; -o-user-select: none; user-select: none; -webkit-user-drag: none; width: 100px; height: 100px; border-radius: 50%; overflow: hidden;">
         <img src="https://prayogak.github.io/sc/htmlku/clicks.jpg" style="width: 100%; height: 100%;" alt="clicks">
     </div>
-    <br>
-    <div data-mndbanid="aa9d59eb-33aa-4ad0-adc3-09ab4cc3574b"></div>
-
+    
     <script>
         var count = 0;
         var maxClicks = 1000000;
