--- a/sc/html/clicker.html
+++ b/sc/html/clicker.html
@@ -47,7 +47,7 @@
         <p style="font-weight: bold;">CLICKS: <span id="counterDisplay">0</span></p>
     </div>
     <div id="imageContainer" onclick="incrementCounter()" style="-moz-user-select: -moz-none; -khtml-user-select: none; -webkit-user-select: none; -o-user-select: none; user-select: none; -webkit-user-drag: none; width: 100px; height: 100px; border-radius: 50%; overflow: hidden;">
-        <img src="../assets/0p5vyb6.jpg" style="width: 100%; height: 100%;" alt="clicks">
+        <img src="../assets/clickme-1.png" style="width: 100%; height: 100%;" alt="clicks">
     </div>
     
     <script>
