--- a/sc/html/clicker.html
+++ b/sc/html/clicker.html
@@ -34,14 +34,13 @@
         }
     </style>
     <script async src="https://ss.nwmnd.com/interstitial.js" data-mndintid="4caa82de-1791-4d7c-ab4e-328ac420b4b5"></script>
-    <link rel="stylesheet" href="../assets/text.css" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta charset="UTF-8">
     <title>Global Clicker</title>
 </head>
 <body style="-webkit-user-select: none; /* Safari */ -moz-user-select: none; /* Firefox */ -ms-user-select: none; /* IE 10+ */ user-select: none; /* Standard syntax */">
     <div id="header">
-        <h1 class="text-redan">Global Clicker</h1>
+        <h1>Global Clicker</h1>
         <p style="font-weight: bold;">CLICKS: <span id="counterDisplay">0</span></p>
     </div>
     <div id="imageContainer" onclick="incrementCounter()" style="width: 100px; height: 100px; border-radius: 50%; overflow: hidden;">
