--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script src="sc/assets/times.js"></script>
     <script async src="https://ss.nwmnd.com/interstitial.js" data-mndintid="4caa82de-1791-4d7c-ab4e-328ac420b4b5"></script>
     <script async src="https://ss.nwmnd.com/banner.js"></script>
+    <script async src="https://ss.nwmnd.com/native.js"></script>
     <title>STORY CREEPY</title>
   </head>
 
